# aura-clinical-nlp

./: .env  .envexample  .gitignore  LICENSE  NLP_Medical_Pipeline_FR_v2_.ipynb  README.md  pyproject.toml  requirements.txt  setup_env_nlp.bat  utils.txt
AURA-fastapi/: bioBERT_manager.py  download_synthea.ipynb  json_format_requests_and_responses.py  main.py  mt5_translator.py  other_test.ipynb  requirements.txt  system_diagnostic.py  testModelNLPHuggingFace.py  test_notebook.ipynb  text_helper.py  text_request.py  upload_model_to_hf.py
AURA-fastapi/pre_trained_models/: MyFinetunedModelManager.py  __init__.py  facebook_mbart_manager.py  gpt2_manager.py  medical_mt5_manager.py  mistral_manager.py  readme.md
DATA/: CheckForFhirNotes.py  generate_annoted_csv.ipynb  requirements.txt  synthea_csv_summarizer.py  synthea_first_test.ipynb  synthea_read_me_first.ipynb
DATA/GENERATED_FILES/: test.txt
DATA/MORE_DATA/: Dataset_320_sentences.csv  Dataset_less_sentences.csv  data_generator.py  data_generator_100.py  data_generator_200.py  frequency_based_data.ipynb  medical_dataset_V2.csv  plan_data.ipynb
DATA/synthea/: Dockerfile
DATA/synthea/OpenJDK-24/: release
DATA/synthea/OpenJDK-24/jmods/: java.compiler.jmod  java.datatransfer.jmod  java.instrument.jmod  java.logging.jmod  java.management.jmod  java.management.rmi.jmod  java.naming.jmod  java.net.http.jmod  java.prefs.jmod  java.rmi.jmod  java.scripting.jmod  java.se.jmod  java.security.jgss.jmod  java.security.sasl.jmod  java.smartcardio.jmod  java.sql.jmod  java.sql.rowset.jmod  java.transaction.xa.jmod  java.xml.crypto.jmod  jdk.accessibility.jmod  jdk.attach.jmod  jdk.charsets.jmod  jdk.crypto.cryptoki.jmod  jdk.crypto.ec.jmod  jdk.dynalink.jmod  jdk.editpad.jmod  jdk.graal.compiler.jmod  jdk.graal.compiler.management.jmod  jdk.hotspot.agent.jmod  jdk.httpserver.jmod  jdk.incubator.vector.jmod  jdk.internal.ed.jmod  jdk.internal.jvmstat.jmod  jdk.internal.le.jmod  jdk.internal.md.jmod  jdk.internal.opt.jmod  jdk.internal.vm.ci.jmod  jdk.jartool.jmod  jdk.jcmd.jmod  jdk.jconsole.jmod  (+23 more)
MODEL_USING_DATA/: donnees_medicales_50000.csv  first_model_try.ipynb
TEST_GPT/: analyse_feelings.ipynb
aura_project/: .gitignore  pyproject.toml
aura_project/aura_backend/: settings.py  urls.py
aura_project/med_assistant/: admin.py  api_client.py  apps.py  forms.py  models.py  nlp_pipeline.py  urls.py  views.py
aura_project/med_assistant/management/commands/: create_initial_users.py
aura_project/med_assistant/migrations/: 0001_initial.py  0002_observation_model_prediction_and_more.py  0003_userprofile.py  0004_observation_created_by_observation_modified_by.py
aura_project/med_assistant/static/med_assistant/js/: audio_recorder.js  base.js  dashboard.js  statistics.js
aura_project/med_assistant/templates/med_assistant/: base.html  dashboard.html  observation_delete_confirm.html  observation_detail.html  observation_edit.html  observation_form.html  patient_delete_confirm.html  patient_detail.html  patient_form.html  patient_list.html  statistics.html
aura_project/med_assistant/templates/med_assistant/auth/: login.html  register.html
aura_project/med_assistant/templatetags/: custom_filters.py
aura_project/med_assistant/utils/: nlp_status.py
notebooks/: Dataset_320_sentences.csv  Dataset_less_sentences.csv  NLP_Medical_Pipeline_FR_v2_.ipynb  NLP_Medical_Pipeline_FR_v3.ipynb
(+1 files in other folders)
