[tool.poetry]
name = "aura-clinical-nlp"
version = "0.1.0"
description = ""
authors = ["Wael Bensoltana <wael.bensoltana@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
transformers = ">=4.52.4,<5.0.0"
datasets = ">=3.6.0,<4.0.0"
torch = ">=2.0.1,<3.0.0"
accelerate = ">=0.27.0,<1.0.0"
torchaudio = ">=2.0.1,<3.0.0"
librosa = ">=0.11.0,<0.12.0"
sentencepiece = ">=0.2.0,<0.3.0"
gradio = ">=5.34.2,<6.0.0"
scikit-learn = ">=1.7.0,<2.0.0"
huggingface-hub = ">=0.33.0,<0.34.0"
jupyter = ">=1.1.1,<2.0.0"
ipykernel = ">=6.29.5,<7.0.0"
pandas = ">=2.0.3,<3.0.0"
numpy = ">=1.26.4,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
