[tool.poetry]
name = "aura"
version = "0.1.0"
description = "Assistant intelligent pour la surveillance hospitalière (résumés, signaux faibles, entités médicales)"
authors = [
    "Nicolas Cassonnet <nicolas.cassonnet@wanadoo.fr>",  # GitHub: NicoCasso
    "Wael Bensoltana <wael.bensoltana@gmail.com>",       # GitHub: wbensolt
    "Dorothée Catry <catrydorothee@gmail.com>"           # GitHub: DorotheeCatry
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DorotheeCatry/aura"
repository = "https://github.com/DorotheeCatry/aura"
keywords = ["django", "nlp", "medtech", "transformers", "bert", "résumé médical"]

[[tool.poetry.packages]]
include = "aura_project"


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.0"
python-decouple = "^3.8"
django-tailwind = {extras = ["reload"], version = "^4.0.1"}
# NLP Dependencies
torch = "^2.0.0"
torchaudio = "^2.0.0"
transformers = "^4.35.0"
librosa = "^0.10.0"
soundfile = "^0.12.0"
faster-whisper = "^1.1.1"
sentencepiece = "^0.2.0"
accelerate = "^1.8.1"
flake8 = "^7.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
ipython = "^8.24.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"